# explr

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
explr/: __init__.py  cli.py  models.py  renderer.py  tracer.py
explr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
explr_diagrams/mermaid/: branching_diagram.mmd  classes_diagram.mmd  main_diagram.mmd  recursive_diagram.mmd  simple_diagram.mmd
test_files/: branching.py  classes.py  hello.py  hello2.py  no_calls.py  recursive.py  simple.py
test_files/multi_module/: auth.py  db.py  main.py
