[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "explr"
dynamic = ["version"]
description = "Trace any Python process and generate a clean call graph diagram"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["graphviz>=0.20", "mermaid-py>=0.8.4"]
keywords = ["tracing", "call-graph", "debugging", "visualization", "profiling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/omavashia2005/explr"
Repository = "https://github.com/omavashia2005/explr"
"Bug Tracker" = "https://github.com/omavashia2005/explr/issues"

[project.scripts]
explr = "explr.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["explr"]

[tool.setuptools_scm]
# Version is derived from git tags: v0.1.0 → 0.1.0
# Between tags: 0.1.0.dev3+gabcdef (3 commits since v0.1.0)
